Функция редактирования профиля